fixed footer alignment and added link to mindshare.

--- a/sass/custom-styles.scss
+++ b/sass/custom-styles.scss
@@ -62,8 +62,6 @@ footer.footer {
 }
 
 footer.bottom-footer {
-  min-height: 50px;
-  line-height: 50px;
 }
 
 .bypostauthor > article .fn:before {
